--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                         <img src="images/4aexc2pq8DM7s0UyyHS2zW4146MFeSIroIKoaDYV.jpg" alt="" class="bride_img">
                     </div>
                     <div class="about-body" data-aos="fade-up" data-aos-duration="3000">
-                        <h3 class="bride_name"> Văn Thu</h3>
+                        <h3 class="bride_name">Thu Thảo</h3>
                                                   <!--   <p class="bride_birthday">
                                 Cô dâu thích nấu ăn và du lịch </p> -->
                         
@@ -519,7 +519,7 @@
                         <img src="images/Svq3eeuRukLZhgTrWObwB6NYqNRjnT41ayiuFbXN.jpg" alt="" class="groom_img">
                     </div>
                     <div class="about-body" data-aos="fade-up" data-aos-duration="3000">
-                        <h3 class="groom_name">Thu Thảo</h3>
+                        <h3 class="groom_name">Văn Thu</h3>
                                                     <!-- <p class="groom_birthday">
                                 Chú rể hướng ngoại, thích chơi thể thao và đi du lịch </p> -->
                                                 
