--- a/index.html
+++ b/index.html
@@ -924,8 +924,8 @@
                     <div class="gift-container" id="gift-container">
                         <div class="gift-card">
                             <div class="gift-qr">
-                               <!--  <img src="images/1aqdKH4LJjA7i2hV2TNmghobanMRucbJOCieVDmT.jpg" alt="" class="groom_qr" style="max-width:100%">
-                                <img src="images/ck3SH4T07KWGZE7RDJcJhm1g8UX2Amaf4s8aTdTW.jpg" alt="" class="groom_qr" style="max-width:100%"> -->
+                                <img src="images/56908286-1a96-484a-9fb5-e65eaafcd151.jpeg" alt="" class="groom_qr" style="max-width:100%">
+                                <img src="images/356eb2c1-02d8-488e-9684-5de04d6b9f96.jpeg" alt="" class="groom_qr" style="max-width:100%">
                             </div>
                             <div class="gift-body">
                             </div>
